--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "universal-sha256-js",
   "version": "1.0.1",
   "description": "An ultra lightweight ~400b JavaScript SHA256 cryptographic hash function (Node.js + Browsers).",
+  "description": "An ultra lightweight ~400b universal JavaScript SHA256 cryptographic hash function (Node.js + Browsers).",
   "scripts": {
     "prepare": "npm run prepare:jsdoc && npm run prepare:prettier",
     "prepare:jsdoc": "jsdoc-md",
